# gd-thingy

./: Cargo.toml
public/: index.html
public/assets/css/: style.css
public/assets/ew/: recent.js
src/: api.rs  main.rs  srv.rs
src/gd_parsing/: mod.rs  structs.rs
