[package]
name = "gd-stuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
rocket = "0.5.0"
rocket_ws = "0.1.0"
reqwest = "0.11.23"
dash-rs = { git = "https://github.com/stadust/dash-rs", version = "0.1.0" }
